RESOLVED FIXED 280515
[FFC] Fix imported/w3c/web-platform-tests/css/css-flexbox/flexbox-flex-wrap-wrap-reverse.htm
https://bugs.webkit.org/show_bug.cgi?id=280515
Summary [FFC] Fix imported/w3c/web-platform-tests/css/css-flexbox/flexbox-flex-wrap-w...
zalan
Reported 2024-09-27 08:05:16 PDT
ssia
Attachments
[fast-cq]Patch (4.60 KB, patch)
2024-09-27 08:14 PDT, zalan
no flags
zalan
Comment 1 2024-09-27 08:14:03 PDT
Created attachment 472704 [details] [fast-cq]Patch
EWS
Comment 2 2024-09-27 09:24:30 PDT
Committed 284366@main (68dd7315eb68): <https://commits.webkit.org/284366@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 472704 [details].
Radar WebKit Bug Importer
Comment 3 2024-09-27 09:25:16 PDT
Note You need to log in before you can comment on or make changes to this bug.