[FFC] Fix imported/w3c/web-platform-tests/css/css-flexbox/flexbox-flex-wrap-wrap-reverse.htm https://bugs.webkit.org/show_bug.cgi?id=280515

Reviewed by Antti Koivisto.

wrap-reverse is similar to column/row revers where we need to account for border/padding unless
they are part of the inner size (see box-sizing).

* Source/WebCore/layout/formattingContexts/flex/FlexFormattingContext.cpp:
(WebCore::Layout::FlexFormattingContext::setFlexItemsGeometry):

Canonical link: https://commits.webkit.org/284366@main